# calico

./: .gitignore  CMakeLists.txt  Makefile  README.md  RulerView.swift  Workspace.swift  swiftgen.yml
App/: CMakeLists.txt
App/Component/: Camera+Component.swift  Component.swift  Tag+Component.swift  Transform+Component.swift
App/ECS/: ECS+Component.swift  ECS+Entity.swift  ECS+Identifiers.swift
App/Editor/: WindowController.swift
App/Editor/Console/: Console.swift  ConsoleViewController.swift
App/Editor/CreateProject/: CreateProjectItemView.swift  CreateProjectView.swift  CreateProjectViewController.swift
App/Editor/Main/: MainViewController.swift  RenderViewController.swift  SidebarViewController.swift
App/Editor/Test/: EditorViewController.swift  TextView.swift
App/Math/: Math+Scalar.swift
App/Renderer/: DepthStencilStates.swift  GBufferTextures.swift  PipelineStates.swift  Renderer.swift  SinglePassDeferredRenderer.swift  VertexDescriptors.swift
App/Renderer/Mesh/: Material.swift  Mesh.swift  SubMesh.swift
App/Renderer/Utilities/: BufferView.swift  Camera.swift  RenderDestination.swift
App/Scene/: Object.swift  Scene.swift
App/Shaders/: AAPLDirectionalLight.metal  AAPLFairy.metal  AAPLGBuffer.metal  AAPLPointLights.metal  AAPLSkybox.metal  Shader-Header.h
App/Shared/: AppDelegate.swift  RootViewController.swift  ViewController.swift
App/Shared/Extensions/: PlatformView+Layout.swift
App/Shared/Platform/: Operator.swift  PlatformEdgeInsets.swift  PlatformView.swift  PlatformViewController.swift
App/iOS/: Info.plist
App/macOS/: Button.swift  Color.swift  Font.swift  ImageView.swift  Info.plist  Label.swift  Window.swift  main.swift
Framework/: CMakeLists.txt
Framework/Resources/: Info.plist
Modules/ECS/: Project.swift
Modules/ECS/Sources/: ECS+ComponentMask.swift  ECS+Entity.swift  ECS+Identifiers.swift  ECS.swift
Modules/Math/: Project.swift
Modules/Math/Sources/: Math+Matrix.swift  Math+TypeAlias.swift  Math+Vector.swift
Modules/PeerTalk/: Project.swift
Modules/PeerTalk/Sources/: PTAddress.h  PTAddress.m  PTChannel.h  PTChannel.m  PTExampleProtocol.h  PTProtocol.h  PTProtocol.m  PeerAddress.h  PeerAddress.m  PeerTalk_iOS.h  PeerTalk_macOS.h  USBMux.h  USBMuxChannel.h  USBMuxChannel.m  USBMuxManager.h  USBMuxManager.m
Modules/Platform/: Project.swift
Modules/Platform/Sources/: Operator.swift  PlatformView+Layout.swift  PlatformView.swift  PlatformViewController.swift
Modules/Renderer/: Project.swift
Modules/Renderer/Sources/: DepthStencilStates.swift  GBufferTextures.swift  PipelineStates.swift  TraditionalDeferredRenderer.swift  VertexDescriptors.swift
Modules/Renderer/Sources/Extensions/: Metal+Extensions.swift  ModelIO+Extensions.swift
Modules/Renderer/Sources/Mesh/: Material.swift  Mesh.swift  SubMesh.swift
Modules/Renderer/Sources/Utilities/: BufferView.swift  Camera.swift  RenderDestination.swift
Modules/Shared/: Project.swift
Modules/Shared/Sources/Component/: Component.swift  Tag+Component.swift  Transform+Component.swift
Modules/Shared/Sources/Scene/: Scene.swift
Renderer/: CMakeLists.txt  Renderer.swift  Scene.swift
Renderer/Utilities/: Camera.swift  Transform.swift
Shaders/: AAPLShaderTypes.h  Shader-Header.h
Targets/: Project.swift
Targets/Editor/Resources/Assets/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
Targets/Editor/Resources/Shaders/: AAPLConfig.h  AAPLDirectionalLight.metal  AAPLFairy.metal  AAPLGBuffer.metal  AAPLPointLights.metal  AAPLShaderCommon.h  AAPLShaderTypes.h  AAPLShadow.metal  AAPLSkybox.metal
Targets/Editor/Sources/: AppDelegate.swift  SidebarViewController.swift  ViewController.swift  main.swift
Targets/Editor/Sources/Common/: Button.swift  Color.swift  Font.swift  ImageView.swift  Window.swift
Targets/Editor/Sources/Editor/Console/: Console.swift  ConsoleViewController.swift
Targets/Editor/Sources/Editor/CreateProject/: CreateProjectItemView.swift  CreateProjectView.swift  CreateProjectViewController.swift
Targets/Editor/Sources/Editor/Main/: MainViewController.swift  RenderViewController.swift
Targets/Preview/Resources/en.lproj/: InfoPlist.strings  Localizable.strings
Targets/Preview/Sources/: AppDelegate.swift  ViewController.swift
cmake/: calico.cmake
tuist/: Config.swift  Dependencies.swift
tuist/ProjectDescriptionHelpers/: Constants.swift  Project+Templates.swift  Settings+Templates.swift  Target+Templates.swift  TargetDependency+SPM+Templates.swift
